# bleeperpreter

./: .gitignore  AST  Cargo.toml  README.md  notes
bppt/: Cargo.toml  LICENSE.txt
bppt-midi/: Cargo.toml
bppt-midi/midi/: 2 parts.mid  C at 120 BPM.mid  C at 60 BPM 2-4.mid  C at 60 BPM 4-2.mid  C at 60 BPM oboe.mid  C at 60 BPM.mid
bppt-midi/src/lib/: lib.rs  misc.rs  playback.rs  render.rs  structs.rs
bppt-midi/src/lib/playback/: bytes_utils.rs
bppt-midi/toml/: poc.toml
bppt-wav/: Cargo.toml
bppt-wav/json/: superposition test.json
bppt-wav/src/lib/: lib.rs  mixing.rs  playing.rs  structure.rs
bppt-wav/src/lib/mixing/: processing.rs
bppt-wav/src/lib/mixing/processing/: decoder.rs
bppt-wav/src/lib/mixing/tests/: helpers.rs
bppt-wav/src/lib/structure/: de.rs  default.rs
bppt-wav/src/lib/structure/de/: signal.rs
bppt/src/: lib.rs  structure.rs
bppt/src/structure/: de.rs  default.rs  iter.rs
bppt/src/structure/de/: atoms.rs  notes.rs
bppt/src/structure/de/atoms/: tests.rs
icon/: icon.piko  icon.pxo
json/: loop test.json  poc.json  superposition test.json  tuplet test.json  volume test.json
json pocs/: poc.json  poc1.json
src/: audio.rs  backbone.rs  cereal.rs  cli.rs  doc.rs  file.rs  json.rs  jsons.rs  lib.rs  main.rs  mixing.rs  playing.rs  proc.rs  processing.rs  saving.rs  structs.rs  structure.rs  tags.rs  valid.rs
src/backbone/: parsing.rs  parsing_errors.rs  pitch_shift.rs  resampling.rs
src/backbone/parsing/: logos.rs
src/mixing/: processing.rs  tests.rs
src/mixing/processing/: context.rs  decoder.rs
src/mixing/tests/: helpers.rs
src/processing/: error.rs  pitch_shift.rs  resampling.rs
src/structure/: de.rs  default.rs  se.rs
src/structure/de/: atoms.rs  de_errors.rs  logos.rs  notes.rs  signal.rs
src/structure/de/atoms/: tests.rs
src/structure/de/logos/: tests.rs
src/structure/de/signal/: tests.rs
src/structure/se/: maskatom.rs
