[package]
name = "bleeperpreter"
version = "0.2.1"
edition = "2021"
about = "An advanced JSON MML interpreter"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.21", features = ["derive"] }
derive-new = "0.5"
dirs = "5.0"
hound = "3.5"
logos = "0.13"
meval = { version = "0.2", features = ["serde"] }
rayon = "1.7"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_lines = "0.6"