[package]
name = "bppt"
version = "0.2.3"
edition = "2021"
description = "An advanced JSON MML interpreter"
authors = ["Breval Ferrari <breee@duck.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.21", features = ["derive"] }
derive-new = "0.5"
dirs = "5.0"
hound = "3.5"
lazy-regex = { version = "3.0.1", features = ["perf"] }
meval = { version = "0.2", features = ["serde"] }
nom = "7.1"
rayon = "1.7"
rodio = { version = "0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_lines = "0.6"
