[package]
name = "bppt-midi"
version = "0.1.0"
edition = "2021"

[lib]
name = "bppt_midi"
path = "src/lib/lib.rs"

[[bin]]
name = "bppt-midi-cli"
path = "src/bin/cli.rs"

[dependencies]
apres = "0.3.0"
basic-toml = "0.1.4"
rustysynth = "1.3.1"
tinyaudio = "0.1.2"
bppt = { path = "../bppt" }
serde = { version = "1.0.188", features = ["derive"] }
derive-new = "0.5.9"
anyhow = "1.0.75"
