[package]
name = "bppt"
version = "0.2.5"
edition = "2021"
description = "A custom MML interpreting framework"
authors = ["Breval Ferrari <breee@duck.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
derive-new = "0.5"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
